--- a/Chinese-Chess-v3.csproj
+++ b/Chinese-Chess-v3.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\External\StarAnimation\StarAnimation.csproj" />
     <Content Include="Assets\Font\MoeLI.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
