Commit from Git Bash

--- a/Chinese-Chess-v3.csproj
+++ b/Chinese-Chess-v3.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <!--ProjectReference Include="StarAnimation\StarAnimation.csproj" /-->
+    <Compile Remove="DEPRECATED\**\*.cs;**\DEPRECATED\**\*.cs" />
     <Content Include="Assets\Font\MoeLI.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
