--- a/Chinese-Chess-v3.csproj
+++ b/Chinese-Chess-v3.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0" />
     <!--ProjectReference Include="StarAnimation\StarAnimation.csproj" /-->
     <Compile Remove="DEPRECATED\**\*.cs;**\DEPRECATED\**\*.cs" />
     <Content Include="Assets\Font\MoeLI.ttf">
